syntax = "proto3";

option java_multiple_files = true;
option java_package = "landmarks";

package landmarks;

service LandmarksService {
  rpc submitPhoto(stream SubmitPhotoRequest) returns (SubmitIdentifier) {}
  rpc lookupResults(SubmitIdentifier) returns (LookupResults)  {}
  rpc getPhotos(ConfidenceThreshold) returns (GetPhotosResponse) {}
}

message SubmitPhotoRequest {
  oneof payload {
    bytes photo_chunk = 1;
    ImageMetadata metadata = 2;
  }
}

message ImageMetadata {
  string name = 1;
  string hash = 2;
}

message SubmitIdentifier {
  string identifier = 1;
}

message LookupResults {
  repeated Landmark landmarks = 1;
  bytes map = 2;
}

message Landmark {
  string name = 1;
  double latitude = 2;
  double longitude = 3;
  double confidence = 4;
}

message ConfidenceThreshold {
  double confidence_threshold = 1;
}

message GetPhotosResponse {
  repeated Photo photos = 1;
}

message Photo {
  string photo_name = 1;
  string landmark_name = 2;
  double confidence = 3;
}